--- a/test.html
+++ b/test.html
@@ -4,7 +4,14 @@
 
 <img align="top" src="https://www.genivia.com/images/sjot-logo.png"> <b style="font-size:45px">SJOT for JS in action</b>
 
-<h2>JSON source:</h2>
+<h2>JSON source</h2>
+
+This JSON object has an embedded SJOT schema that describes its valid content
+precisely, such as the property types, whether properties are optional (e.g.
+tags?  and age?), default values for properties (e.g. id?999), inheritance
+(personDetails extends person), and whether properties should occur together
+(e.g. @all tags and phone should be used together or not at all):
+
 <p id="json"></p>
 
 <h2>SJOT in JSON test</h2>
