--- a/test.html
+++ b/test.html
@@ -6,18 +6,25 @@
 
 <h2>JSON source</h2>
 
-This JSON object has an embedded SJOT schema that describes its valid content
-precisely, such as the property types, whether properties are optional (e.g.
-tags?  and age?), default values for properties (e.g. id?999), inheritance
-(personDetails extends person), and whether properties should occur together
-(e.g. @all tags and phone should be used together or not at all):
+This JSON object has an embedded SJOT schema with a @root type that describes its valid personDetails content precisely, such as the property types, which properties are optional (e.g.  tags?  and age?), default values for properties (e.g. id?999), inheritance (personDetails extends person), and which properties should occur @all together (e.g. tags and phone should be used together or not at all):
 
 <p id="json"></p>
 
-<h2>SJOT in JSON test</h2>
-<p id="sjot"></p>
+<h2>JS code to parse JSON and validate</h2>
 
-<h2>SJOT schema test</h2>
+<pre>
+    var obj = JSON.parse(text);
+
+    if (SJOT.validate(obj))
+      document.getElementById("demo").innerHTML = obj.id + "&lt;br&gt;" + obj.name + "&lt;br&gt;" + obj.street + "&lt;br&gt;" + obj.phone;
+    else
+      document.getElementById("demo").innerHTML = "Object is invalid";
+</pre>
+
+<h2>SJOT in JSON live test</h2>
+<p id="demo"></p>
+
+<h2>SJOT schema live test</h2>
 <p id="with"></p>
 
 <script src="sjot.js"></script>
@@ -69,26 +76,16 @@ document.getElementById("json").innerHTML =
 var obj = JSON.parse(text);
 
 // validate obj against embedded SJOT
-if (SJOT.validate(obj)) {
-
-  document.getElementById("sjot").innerHTML =
-    obj.id + "<br>" +
-    obj.name + "<br>" +
-    obj.street + "<br>" +
-    obj.phone;
-
-}
+if (SJOT.validate(obj))
+  document.getElementById("demo").innerHTML = obj.id + "<br>" + obj.name + "<br>" + obj.street + "<br>" + obj.phone;
+else
+  document.getElementById("demo").innerHTML = "Object is invalid";
 
 // validate obj against the schema person object type
-if (SJOT.validate(obj, "#personDetails", schema)) {
-
-  document.getElementById("with").innerHTML =
-    obj.id + "<br>" +
-    obj.name + "<br>" +
-    obj.street + "<br>" +
-    obj.phone;
-
-}
+if (SJOT.validate(obj, "#personDetails", schema))
+  document.getElementById("with").innerHTML = obj.id + "<br>" + obj.name + "<br>" + obj.street + "<br>" + obj.phone;
+else
+  document.getElementById("with").innerHTML = "Object is invalid";
 
 </script>
 
