--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 
 <h2>JSON source</h2>
 
-This JSON object has an embedded SJOT schema with a @root type that describes its valid personDetails content precisely, such as the property types, which properties are optional (e.g.  tags?  and age?), default values for properties (e.g. id?999), inheritance (personDetails extends person), and which properties should occur @all together (e.g. tags and phone should be used together or not at all):
+This JSON object has an embedded SJOT schema with a @root type that describes its valid PersonDetails content precisely, such as the property types, which properties are optional (e.g.  tags?  and age?), default values for properties (e.g. id?999), inheritance (PersonDetails extends Person), and which properties should occur @all together (e.g. tags and phone should be used together or not at all):
 
 <p id="json"></p>
 
