--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img align="top" src="https://www.genivia.com/images/sjot-logo.png"> <b style="font-size:45px">SJOT for JS in action</b>
+<img align="top" src="https://www.genivia.com/images/sjot-logo-small.png"> <b style="font-size:45px">&nbsp;SJOT for JS in action</b>
 
 <h2>JSON source</h2>
 
